--- a/mod_cgi.conf
+++ b/mod_cgi.conf
@@ -1,9 +1,13 @@
 server.modules += ( "mod_cgi" )
 server.modules += ( "mod_alias" )
-
+server.modules += ( "mod_setenv" )
 
 $HTTP["url"] =~ "^/cgi-bin/" {
         server.stream-response-body = 2
         cgi.assign = ( "" => "" )
         alias.url += ( "/cgi-bin/" => "/var/www/cgi-bin/" )
 }
+
+setenv.add-environment = ( "STREAM_URL" => env.STREAM_URL,
+			   "FFMPEG_INPUT_OPTIONS" => env.FFMPEG_INPUT_OPTIONS,
+			   "FFMPEG_OUTPUT_OPTIONS" => env.FFMPEG_OUTPUT_OPTIONS )
