index page for viewing stream

--- a/mod_cgi.conf
+++ b/mod_cgi.conf
@@ -2,6 +2,10 @@ server.modules += ( "mod_cgi" )
 server.modules += ( "mod_alias" )
 server.modules += ( "mod_setenv" )
 
+$HTTP["url"] =~ "^/" {
+	alias.url += ( "/" => "/var/www/html/" )
+}
+
 $HTTP["url"] =~ "^/cgi-bin/" {
         server.stream-response-body = 2
         cgi.assign = ( "" => "" )
